# signal

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE.md  README.md  bundler.toml  flake.nix
apps/desktop/: Cargo.toml  Dioxus.toml  fts-theme.css  input.css
apps/desktop/assets/: tailwind.css
apps/desktop/src/: main.rs
apps/signal-cli/: Cargo.toml
apps/signal-cli/src/: lib.rs  main.rs
crates/fts-signal-controller/: Cargo.toml
crates/fts-signal-controller/src/: editor.rs  lib.rs  macro_timer.rs  param_queue.rs  param_queue_stub.rs  plugin.rs  reaper_bootstrap.rs  scene_timer.rs  shm_bridge.rs
crates/nam-manager/: Cargo.toml
crates/nam-manager/src/: catalog.rs  gain_group.rs  ir.rs  lib.rs  nam_file.rs  pack.rs  resolve.rs  scanner.rs  vst_chunk.rs
crates/signal/: Cargo.toml
crates/signal-controller/: Cargo.toml
crates/signal-controller/src/: active_context.rs  events.rs  lib.rs  variation.rs
crates/signal-controller/src/ops/: block_presets.rs  blocks.rs  engines.rs  error.rs  layers.rs  mod.rs  module_presets.rs  profiles.rs  racks.rs  rig_importer.rs  rigs.rs  scene_templates.rs  setlists.rs  songs.rs
crates/signal-extension/: Cargo.toml
crates/signal-extension/src/: demo_profile.rs  demo_rig.rs  demo_setlist.rs  lib.rs  macro_learn.rs  main.rs  place_switch.rs  scene_midi.rs
crates/signal-import/: Cargo.toml
crates/signal-import/src/: lib.rs  library_writer.rs  types.rs
crates/signal-import/src/fabfilter/: mod.rs  parser.rs  registry.rs  rig_presets.rs  tags.rs
crates/signal-import/src/rfxchain/: mod.rs
crates/signal-live/: Cargo.toml
crates/signal-live/src/: block_service.rs  browser_service.rs  daw_block_ops.rs  daw_rig_builder.rs  daw_rig_ops.rs  engine_service.rs  layer_service.rs  lib.rs  macro_bridge.rs  macro_constants.rs  macro_error.rs  macro_integration_guide.md  macro_recorder.rs  macro_registry.rs  macro_setup.rs  macro_system.rs  macro_templates.rs  profile_service.rs  rack_service.rs  resolve_service.rs  rig_service.rs  scene_template_service.rs  setlist_service.rs  song_service.rs  tests.rs
crates/signal-live/src/engine/: commands.rs  daw_bridge.rs  diff.rs  error.rs  fx_binding.rs  gapless.rs  mock.rs  mod.rs  modulation.rs  morph.rs  param_bridge.rs  patch_applier.rs  rig_engine.rs  rig_scene_applier.rs  scene_applier.rs  slot.rs  snapshot_ops.rs  target.rs  vst_bridge.rs
crates/signal-live/src/tests/: macro_integration_test.rs
crates/signal-proto/: Cargo.toml
crates/signal-proto/src/: actions.rs  automation.rs  block.rs  builder.rs  catalog.rs  collection_macro.rs  easing.rs  engine.rs  fx_send.rs  ids.rs  layer.rs  lib.rs  metadata.rs  midi.rs  midi_actions.rs  model.rs  modulation.rs  module_type.rs  override_policy.rs  overrides.rs  plugin_block.rs  profile.rs  rack.rs  resolve.rs  rig.rs  rig_template.rs  routing.rs  scene_template.rs  services.rs  setlist.rs  signal_chain.rs  song.rs  tagging.rs  template.rs  traits.rs  versioning.rs
crates/signal-proto/src/defaults/: archetype_jm.rs  archetype_ndsp.rs  guitar.rs  mod.rs
crates/signal-storage/: Cargo.toml
crates/signal-storage/src/: block_repo.rs  daw_snapshot_repo.rs  engine_repo.rs  import_export.rs  layer_repo.rs  lib.rs  module_repo.rs  profile_repo.rs  rack_repo.rs  rig_repo.rs  scene_template_repo.rs  setlist_repo.rs  sidecar.rs  song_repo.rs  track_template.rs
crates/signal-storage/src/entity/: current_block.rs  daw_snapshot.rs  engine.rs  engine_scene.rs  layer.rs  layer_snapshot.rs  mod.rs  module_preset.rs  module_snapshot.rs  patch.rs  preset.rs  profile.rs  rack.rs  rig.rs  rig_scene.rs  scene_template.rs  section.rs  setlist.rs  setlist_entry.rs  snapshot.rs  song.rs
crates/signal-storage/src/seed_data/: amp.rs  archetype_jm.rs  archetype_ndsp.rs  boost.rs  catalog_import.rs  chorus.rs  compressor.rs  de_esser.rs  delay.rs  doubler.rs  drive.rs  engine.rs  eq.rs  filter.rs  flanger.rs  fxchains_scan.rs  gate.rs  layer.rs  limiter.rs  mod.rs  module.rs  nam_amp.rs  phaser.rs  pitch.rs  profile.rs  reverb.rs  rig.rs  rotary.rs  saturator.rs  setlist.rs  song.rs  tremolo.rs  tuner.rs  vibrato.rs  volume.rs  wah.rs
crates/signal-ui/: Cargo.toml
crates/signal-ui/src/: hooks.rs  infer_adapter.rs  lib.rs  panel_registration.rs  shell.rs
crates/signal-ui/src/components/: block_colors.rs  context_menu.rs  create_modal.rs  crossfade_indicator.rs  dialog.rs  entity_editor.rs  grid_model.rs  manage_buttons.rs  mod.rs  morph_slider.rs  pan_zoom_canvas.rs  review_list.rs  scene_tile.rs  side_sheet.rs  signal_chain_grid.rs  signal_flow_grid_view.rs  slider.rs  star_rating.rs  tabs.rs
crates/signal-ui/src/views/: ab_comparison.rs  automation_lane.rs  block_editor.rs  editor_inspector.rs  fx_binding_status.rs  metadata_display.rs  midi_learn.rs  mod.rs  module_view.rs  param_inspector.rs  performance_view.rs  profile_editor.rs  profile_patch_grid.rs  rig_preset_canvas.rs  (+6 more)
crates/signal/src/: lib.rs  reaper_applier.rs  rig_scene_manager.rs
crates/signal/tests/: John Mayer Test.RPP  daw_helpers.rs  fixtures.rs  reaper_all_around_profile.rs  reaper_build_profiles.rs  reaper_clap_proq4_params.rs  reaper_compression_macro.rs  reaper_connection.rs  reaper_eq_block_variations.rs  reaper_fabfilter_load.rs  reaper_fast_path_open.rs  reaper_gapless_swap.rs  reaper_guitar_rig_save.rs  reaper_guitar_setlist.rs  reaper_macro_learn.rs  reaper_macro_setup.rs  reaper_macros_bootstrap.rs  reaper_module_capture.rs  reaper_multi_fx_macro.rs  reaper_nam_amp_presets.rs  reaper_nam_load.rs  reaper_ndsp_param_inventory.rs  reaper_place_switch.rs  reaper_preset_loading.rs  reaper_profile_update_roundtrip.rs  reaper_project_isolation.rs  reaper_registered_actions.rs  reaper_rig_structure.rs  reaper_save_track_template.rs  reaper_scene_switching.rs  reaper_signal_extension.rs  reaper_signal_load.rs  reaper_stock_testing.rs  reaper_worship_rig.rs  signal_activate_patch_live.rs  signal_builder_api.rs  signal_capture_and_wire.rs  signal_domain.rs  signal_guitar_rig_api.rs  signal_keys_engine_api.rs  (+5 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+94 files in other folders)
