[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
fts-devtools = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
nih_plug_xtask = { git = "https://github.com/FastTrackStudios/nih-plug.git", branch = "reaper-embed-ui" }
reaper-test = { workspace = true, features = ["runner"] }
