[package]
name = "fts-signal-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLAP plugin that manages signal chains on a REAPER track — rig setup, macro modulation, and cross-track parameter routing via SHM"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Plugin framework
nih_plug.workspace = true
fts-plugin-core.workspace = true
atomic_float.workspace = true

# DAW API — all REAPER access goes through this
daw = { workspace = true, features = ["sync", "reaper"] }

# SHM bridge for communication with signal-extension
signal-proto = { path = "../signal-proto" }
daw-extension-runtime.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }
eyre.workspace = true

# Concurrency
crossbeam-channel.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
