[package]
name = "signal-import"
version.workspace = true
edition.workspace = true

[dependencies]
signal-proto = { path = "../signal-proto" }
signal-controller = { path = "../signal-controller" }
uuid.workspace = true
eyre.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
