[package]
name = "signal-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dioxus.workspace = true
fts-ui.workspace = true
lumen-blocks.workspace = true
signal = { path = "../signal" }
signal-controller = { path = "../signal-controller" }
signal-daw-bridge = { path = "../signal-daw-bridge" }
uuid = { version = "1", features = ["v4"] }
tokio = { workspace = true }
tracing.workspace = true
audio-controls.workspace = true
dock-dioxus = { workspace = true, default-features = false }
dock-proto.workspace = true

[features]
default = ["web"]
web = ["dock-dioxus/web"]
