[package]
name = "signal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
daw = ["dep:daw-control", "dep:daw-proto"]

[dependencies]
signal-controller = { path = "../signal-controller" }
signal-live = { path = "../signal-live" }
signal-proto = { path = "../signal-proto" }
signal-storage = { path = "../signal-storage" }
daw-control = { workspace = true, optional = true }
daw-proto = { workspace = true, optional = true }
tokio.workspace = true

[dev-dependencies]
signal-live = { path = "../signal-live" }
signal-import = { path = "../signal-import" }
signal-proto = { path = "../signal-proto" }
nam-manager.workspace = true
daw-control.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
eyre.workspace = true
reaper-test.workspace = true
uuid.workspace = true
futures.workspace = true
base64 = "0.22"
dawfile-reaper.workspace = true
signal-daw-bridge.workspace = true
signal-controller = { path = "../signal-controller" }
