[package]
name = "signal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
daw = ["dep:daw"]

[dependencies]
signal-controller = { path = "../signal-controller" }
signal-daw-bridge = { path = "../signal-daw-bridge" }
signal-import = { path = "../signal-import" }
signal-live = { path = "../signal-live" }
signal-proto = { path = "../signal-proto" }
signal-storage = { path = "../signal-storage" }
nam-manager = { path = "../nam-manager" }
daw = { workspace = true, optional = true }
tokio.workspace = true

[dev-dependencies]
daw = { workspace = true, features = ["file"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
eyre.workspace = true
reaper-test.workspace = true
uuid.workspace = true
futures.workspace = true
base64 = "0.22"
serde_json.workspace = true
